# decimal2

./: CMakeLists.txt
src/: main.c  makefile  s21_another_functions.c  s21_arithmetic.c  s21_comparison.c  s21_converters.c  s21_decimal.h  s21_get_set.c  s21_normalize.c  s21_rand_r.c  s21_set_null_decimal.c
src/unit_tests/: s21_add_test.c  s21_decimal_test.c  s21_from_decimal_to_float_test.c  s21_from_decimal_to_int_test.c  s21_from_int_to_decimal_test.c  s21_is_equal.c  s21_is_greater_or_equal_test.c  s21_is_greater_test.c  s21_is_less_or_equal_test.c  s21_is_less_test.c  s21_is_not_equal_test.c  s21_mul_test.c  s21_sub_test.c
